[package]
name = "rhe"
version = "0.1.0"
authors = ["Tucker Strausbaugh <tckrsstrsbgh@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }

serde = "*"
serde_json = "*"
serde_derive = "*"